--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Henry Martinez
+email: henry.martinez.713@my.csun.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  "Welcome to my website! My name is Henry Martinez and I'm an aspiring full-stack developer, attending California State University, Northridge. Click on my website to learn more."
+baseurl: "/home" # the subpath of your site, e.g. /blog
+url: "https://henrymartinez.me" # the base hostname & protocol for your site, e.g. http://example.com
+github_username:  hnrymrtnz
 
 # Build settings
 theme: minima
